--- a/src/pages/tr/fuarlarimiz.astro
+++ b/src/pages/tr/fuarlarimiz.astro
@@ -187,7 +187,7 @@ const fairsData = {
 const sectors = Object.keys(fairsData);
 ---
 
-<BaseLayout title="Fuarlarımız - Türkel Fuarcılık" description="Türkel Fuarcılık'ın organize ettiği uluslararası fuarlar">
+<BaseLayout locale={locale} title="Fuarlarımız - Türkel Fuarcılık" description="Türkel Fuarcılık'ın organize ettiği uluslararası fuarlar">
   <Header locale={locale} />
   
   <main class="min-h-screen">
