--- a/src/pages/tr/2025-fuar-takvimi.astro
+++ b/src/pages/tr/2025-fuar-takvimi.astro
@@ -178,7 +178,7 @@ const sectors = Object.keys(fairsData);
                     <!-- Fair Image with Logo -->
                     <div class="relative h-64 bg-gradient-to-br from-gray-100 to-gray-300 overflow-hidden">
                       <img 
-                        src="/images/fuarlar-arkaplan.jpg" 
+                        src={fair.image || "/images/fuarlar-arkaplan.jpg"} 
                         alt={fair.name}
                         class="w-full h-full object-cover opacity-80"
                       />
@@ -186,7 +186,7 @@ const sectors = Object.keys(fairsData);
                       <div class="absolute inset-0 flex items-center justify-center">
                         <div class="bg-white bg-opacity-95 rounded-xl p-6 shadow-lg">
                           <img 
-                            src="/images/fuarlar-logo.png" 
+                            src={fair.logo || "/images/fuarlar-logo.png"} 
                             alt={`${fair.name} Logo`}
                             class="h-48 w-auto max-w-[360px] object-contain"
                             style="filter: hue-rotate(0deg);"
