--- a/src/pages/tr/2026-fuar-takvimi.astro
+++ b/src/pages/tr/2026-fuar-takvimi.astro
@@ -244,7 +244,8 @@ const debugInfo = {
                       <img 
                         src={fair.image || "/images/fuarlar-arkaplan.jpg"} 
                         alt={fair.name}
-                        class="w-full h-full object-cover opacity-80"
+                        class="w-full h-full object-cover object-center opacity-80"
+                        style="min-width: 100%; min-height: 100%;"
                       />
                       <!-- Fair Logo Overlay -->
                       <div class="absolute inset-0 flex items-center justify-center">
